Added profile, personal messages

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,8 +1,8 @@
 development:
   database: publics_development
-  hosts: localhost
+  host: localhost
 test:
   database: publics_test
-  hosts: localhost
+  host: localhost
 production:
   uri: <%= ENV['MONGOLAB_URI'] %>
